--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>lanka-smart-crm-hub</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>CUSTOPRO</title>
+    <meta name="description" content="CRM Solution for Customer Management" />
+    <meta name="author" content="CUSTOPRO" />
 
-    <meta property="og:title" content="lanka-smart-crm-hub" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="CUSTOPRO" />
+    <meta property="og:description" content="CRM Solution for Customer Management" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
