--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
     <meta name="description" content="CRM Solution for Customer Management" />
     <meta name="author" content="CUSTOPRO" />
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/images/CustoPro.png" />
+    <link rel="apple-touch-icon" href="/images/CustoPro.png" />
+
     <meta property="og:title" content="CUSTOPRO" />
     <meta property="og:description" content="CRM Solution for Customer Management" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/images/CustoPro.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@CUSTOPRO" />
+    <meta name="twitter:image" content="/images/CustoPro.png" />
   </head>
 
   <body>
